fixes spacing issue on the service page

--- a/wp-content/themes/classy/sass/pages/service.scss
+++ b/wp-content/themes/classy/sass/pages/service.scss
@@ -1,6 +1,13 @@
 .service-page {
     .service-intro {
-        padding: 75px 0 120px 0;
+        //padding: 75px 0 120px 0;
+
+        @media (min-width: 993px) and (max-width: 1200px) {
+            padding: 35px 0 120px 0;
+        }
+        @media (min-width: 1201px) {
+            padding: 0 0 120px 0;
+        }
 
         h3, h1 {
             margin-top: 0;
